5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4347/executions/1577_1559.log
== SUBMITION (2019-03-21 18:40:19) 
-- CODE:
frase = upper("ada lovelace foi a primeira programadora da historia")
print (upper(frase))
-- EXECUTION TIME:
0.116489
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/1559/main.py", line 1, in <module>
    frase = upper("ada lovelace foi a primeira programadora da historia")
NameError: name 'upper' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:40:32) 
-- CODE:
frase = "ada lovelace foi a primeira programadora da historia"
print (upper(frase))
-- EXECUTION TIME:
0.16417
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/1559/main.py", line 2, in <module>
    print (upper(frase))
NameError: name 'upper' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:40:43) 
-- CODE:
frase = "ada lovelace foi a primeira programadora da historia"
print upper(frase)
-- EXECUTION TIME:
0.178156
-- ERROR:
  File "/home/codebench/codes/1577/1559/main.py", line 2
    print upper(frase)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:42:19) 
-- CODE:
frase = ada lovelace foi a primeira programadora da historia
print(upper(frase))
-- EXECUTION TIME:
0.185252
-- ERROR:
  File "/home/codebench/codes/1577/1559/main.py", line 1
    frase = ada lovelace foi a primeira programadora da historia
                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:42:22) 
-- CODE:
frase = ada lovelace foi a primeira programadora da historia
print(upper(frase))
-- EXECUTION TIME:
0.206001
-- ERROR:
  File "/home/codebench/codes/1577/1559/main.py", line 1
    frase = ada lovelace foi a primeira programadora da historia
                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:44:07) 
-- CODE:
frase = "ada lovelace foi a primeira programadora da historia"
print (texto.upper(ada lovelace foi a primeira programadora da historia))
-- EXECUTION TIME:
0.209694
-- ERROR:
  File "/home/codebench/codes/1577/1559/main.py", line 2
    print (texto.upper(ada lovelace foi a primeira programadora da historia))
                                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:44:36) 
-- CODE:
frase = "ada lovelace foi a primeira programadora da historia"
print (texto(upper(ada lovelace foi a primeira programadora da historia)))
-- EXECUTION TIME:
0.205116
-- ERROR:
  File "/home/codebench/codes/1577/1559/main.py", line 2
    print (texto(upper(ada lovelace foi a primeira programadora da historia)))
                                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:02:45) 
-- CODE:
frase = "ada lovelace foi a primeira programadora da historia"
print(upper(ada lovelace foi a primeira programadora da historia)
-- EXECUTION TIME:
0.176904
-- ERROR:
  File "/home/codebench/codes/1577/1559/main.py", line 2
    print(upper(ada lovelace foi a primeira programadora da historia)
                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:07:38) 
-- CODE:
frase = "ada lovelace foi a primeira programadora da historia"
print(upper(frase))
-- EXECUTION TIME:
0.142851
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/1559/main.py", line 2, in <module>
    print(upper(frase))
NameError: name 'upper' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:10:04) 
-- CODE:
frase = "ada lovelace foi a primeira programadora da historia"
print(frase.upper())
-- EXECUTION TIME:
0.138779
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:10:31) 
-- CODE:
frase = "ada lovelace foi a primeira programadora da historia"
print(frase.upper(ada lovelace foi a primeira programadora da historia))
-- EXECUTION TIME:
0.205644
-- ERROR:
  File "/home/codebench/codes/1577/1559/main.py", line 2
    print(frase.upper(ada lovelace foi a primeira programadora da historia))
                                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:10:44) 
-- CODE:
frase = "ada lovelace foi a primeira programadora da historia"
print(frase(upper(ada lovelace foi a primeira programadora da historia)))
-- EXECUTION TIME:
0.130156
-- ERROR:
  File "/home/codebench/codes/1577/1559/main.py", line 2
    print(frase(upper(ada lovelace foi a primeira programadora da historia)))
                                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:11:00) 
-- CODE:
frase = "ada lovelace foi a primeira programadora da historia"
print(frase(upper"ada lovelace foi a primeira programadora da historia"))
-- EXECUTION TIME:
0.167638
-- ERROR:
  File "/home/codebench/codes/1577/1559/main.py", line 2
    print(frase(upper"ada lovelace foi a primeira programadora da historia"))
                                                                          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:11:54) 
-- CODE:
frase = "ada lovelace foi a primeira programadora da historia"
print(frase(upper"ada lovelace foi a primeira programadora da historia"))
-- EXECUTION TIME:
0.207392
-- ERROR:
  File "/home/codebench/codes/1577/1559/main.py", line 2
    print(frase(upper"ada lovelace foi a primeira programadora da historia"))
                                                                          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:12:10) 
-- CODE:
frase = "ada lovelace foi a primeira programadora da historia."
print(frase(upper"ada lovelace foi a primeira programadora da historia."))
-- EXECUTION TIME:
0.150132
-- ERROR:
  File "/home/codebench/codes/1577/1559/main.py", line 2
    print(frase(upper"ada lovelace foi a primeira programadora da historia."))
                                                                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:12:35) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase(upper "Ada Lovelace foi a primeira programadora da historia."))
-- EXECUTION TIME:
0.240136
-- ERROR:
  File "/home/codebench/codes/1577/1559/main.py", line 2
    print(frase(upper "Ada Lovelace foi a primeira programadora da historia."))
                                                                            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:13:34) 
-- CODE:
texto= "Ada Lovelace foi a primeira programadora da historia."
print(texto.upper "Ada Lovelace foi a primeira programadora da historia.")
-- EXECUTION TIME:
0.153486
-- ERROR:
  File "/home/codebench/codes/1577/1559/main.py", line 2
    print(texto.upper "Ada Lovelace foi a primeira programadora da historia.")
                                                                            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:15:58) 
-- CODE:
print (upper("Ada Lovelace foi a primeira programadora da historia."))

-- EXECUTION TIME:
0.133617
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/1559/main.py", line 1, in <module>
    print (upper("Ada Lovelace foi a primeira programadora da historia."))
NameError: name 'upper' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:17:08) 
-- CODE:
texto=Ada Lovelace foi a primeira programadora da historia.
print(texto(upper))

-- EXECUTION TIME:
0.222406
-- ERROR:
  File "/home/codebench/codes/1577/1559/main.py", line 1
    texto=Ada Lovelace foi a primeira programadora da historia.
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:17:19) 
-- CODE:
texto=Ada Lovelace foi a primeira programadora da historia.
print(texto.upper)

-- EXECUTION TIME:
0.167685
-- ERROR:
  File "/home/codebench/codes/1577/1559/main.py", line 1
    texto=Ada Lovelace foi a primeira programadora da historia.
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:17:57) 
-- CODE:
texto=Ada Lovelace foi a primeira programadora da historia.
print(texto.upper "Ada Lovelace foi a primeira programadora da historia.")

-- EXECUTION TIME:
0.156281
-- ERROR:
  File "/home/codebench/codes/1577/1559/main.py", line 1
    texto=Ada Lovelace foi a primeira programadora da historia.
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:18:21) 
-- CODE:
texto=Ada Lovelace foi a primeira programadora da historia.
print(texto.upper"Ada Lovelace foi a primeira programadora da historia.")

-- EXECUTION TIME:
0.186189
-- ERROR:
  File "/home/codebench/codes/1577/1559/main.py", line 1
    texto=Ada Lovelace foi a primeira programadora da historia.
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:18:27) 
-- CODE:
texto=Ada Lovelace foi a primeira programadora da historia.
print(texto.upper"Ada Lovelace foi a primeira programadora da historia.")

-- ERROR:
File "XXXX", line 1
    texto=Ada Lovelace foi a primeira programadora da historia.
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:18:39) 
-- CODE:
texto= Ada Lovelace foi a primeira programadora da historia.
print(texto.upper"Ada Lovelace foi a primeira programadora da historia.")

-- ERROR:
File "XXXX", line 1
    texto= Ada Lovelace foi a primeira programadora da historia.
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:18:47) 
-- CODE:
texto= "Ada Lovelace foi a primeira programadora da historia."
print(texto.upper"Ada Lovelace foi a primeira programadora da historia.")

-- ERROR:
File "XXXX", line 2
    print(texto.upper"Ada Lovelace foi a primeira programadora da historia.")
                                                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:18:56) 
-- CODE:
texto= "Ada Lovelace foi a primeira programadora da historia."
print (texto.upper"Ada Lovelace foi a primeira programadora da historia.")

-- ERROR:
File "XXXX", line 2
    print (texto.upper"Ada Lovelace foi a primeira programadora da historia.")
                                                                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:20:01) 
-- CODE:
texto= "Ada Lovelace foi a primeira programadora da historia."
print (texto.upper())

-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:20:06) 
-- CODE:
texto= "Ada Lovelace foi a primeira programadora da historia."
print (texto.upper())

-- EXECUTION TIME:
0.164843
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
